# Study_NDK_Sample_1

./: README.md
Study_NDK_Sample_1/: .gitignore
Study_NDK_Sample_1/app/: CMakeLists.txt  build.gradle
Study_NDK_Sample_1/app/src/main/: AndroidManifest.xml
Study_NDK_Sample_1/app/src/main/cpp/: NDKSum.cpp  com_study_ndk_NDKDemo.h
Study_NDK_Sample_1/app/src/main/java/com/study/ndk/: JavaClass.java  MainActivity.java  NDKDemo.java
Study_NDK_Sample_1/app/src/main/res/layout/: activity_main.xml
Study_NDK_Sample_1/app/src/main/res/values/: strings.xml
